	* List: Automatic sorting by publication state. #Published' first, 'in preparation' at last.
	* List: Character set conversion from DB -> Display was removed entirely - Bjoern Pedersen
	* Filter: New filter option for the keywords field - Bjoern Pedersen
	* Filter: Added missing state filter option for 'in preparation'
	* Editor: FE user group access to the FE editor can be configured in TS - Bjoern Pedersen
	* Import: BibTeX import improvements e. g. for german umlauts - Bjoern Pedersen
	* Code: Cleanups and improvements
	* Release version 0.5.5

2008-03-17      Marco Ziesing  <mz@puremedia-online.de>

	* Backend: Added ajaxgroupsearch functionality to authorships
	           Set significant values to labels
	* General: Added missing XCLASS inclusions

2008-03-15      Sebastian Holtermann  <sebholt@web.de>

	* Editor: Better TCA loading. This fixes the "Unknown widget" error - Patch by Bjoern Pedersen
	* Export: XML got a 'comment' field which holds the same info text as the BibTeX file head
	* Documentation: Some new images and some small text fixes
	* Release version 0.5.4

2008-03-12      Sebastian Holtermann  <sebholt@web.de>

	* Database: Added a DOI field (Thanks to Bjoern Pedersen)
	* List: Automatic url generation from the DOI field if the file_url field is empty
	* Database: New url field for authors - must be edited in the backend
	* List: URL wrap for authors if an author url is set
	* Release version 0.5.3

2008-03-09      Sebastian Holtermann  <sebholt@web.de>

	* FlexForm: Simplified export link activation (default TRUE)
	* FlexForm: FE-Editor clear cache flag now is TRUE by default
	* Backend: The authorship table is no longer hidden. Though manual editing is not recommended.
	* Backend: Edit fields for "type" and "ISBN" did not show up in the BE - fixed
	* Release version 0.5.2

2008-03-08      Sebastian Holtermann  <sebholt@web.de>

	* Database: Fixed missing pid field in tx_sevenpack_authorships