@@ -207,7 +207,7 @@
 				</config>
 			</TCEforms>
 		</stat_mode>
-		
+
 		<!-- GENERAL: export options -->
 		<export_mode>
 			<TCEforms>
@@ -227,11 +227,11 @@
 <!-- Filter -->
 <s_filter>
 	<ROOT>
-		
+
 		<TCEforms>
 			<sheetTitle>LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.sheet_filter</sheetTitle>
 		</TCEforms>
-		
+
 		<type>array</type>
 		<el>
 
@@ -246,7 +246,7 @@
 					</config>
 				</TCEforms>
 			</enable_year>
-			
+
 			<!-- year -->
 			<years>
 				<TCEforms>
@@ -270,7 +270,7 @@
 					</config>
 				</TCEforms>
 			</enable_author>
-			
+
 			<!-- author list -->
 			<authors>
 				<TCEforms>
@@ -348,13 +348,11 @@
 						<type>radio</type>
 						<items>
 							<numIndex index="0">
-								<numIndex 
-											 index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.keywords_rule.OR</numIndex>
+								<numIndex index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.rule_OR</numIndex>
 								<numIndex index="1">0</numIndex>
 							</numIndex>
 							<numIndex index="1">
-								<numIndex 
-											 index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.keywords_rule.AND</numIndex>
+								<numIndex index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.rule_AND</numIndex>
 								<numIndex index="1">1</numIndex>
 							</numIndex>
 						</items>
@@ -374,7 +372,7 @@
 					</config>
 				</TCEforms>
 			</enable_state>
-			
+
 			<!-- State (submitted, accepted, unpublished) -->
 			<states>
 				<TCEforms>
@@ -409,7 +407,6 @@
 					</config>
 				</TCEforms>
 			</states>
-
 
 			<!-- Bibtype filter -->
 			<!-- Enable filter -->
@@ -501,7 +498,6 @@
 				</TCEforms>
 			</bibtypes>
 
-
 			<!-- Origin filter -->
 			<!-- Enable filter -->
 			<enable_origin>
@@ -535,7 +531,6 @@
 					</config>
 				</TCEforms>
 			</origins>
-
 
 			<!-- Reviewed filter -->
 			<!-- Enable filter -->
@@ -571,7 +566,6 @@
 				</TCEforms>
 			</reviewes>
 
-
 			<!-- In library filter -->
 			<!-- Enable filter -->
 			<enable_in_library>
@@ -606,7 +600,6 @@
 				</TCEforms>
 			</in_library>
 
-			
 			<!-- borrowed filter -->
 			<!-- Enable filter -->
 			<enable_borrowed>
@@ -618,7 +611,7 @@
 					</config>
 				</TCEforms>
 			</enable_borrowed>
-			
+
 			<!-- borrowed -->
 			<borrowed>
 				<TCEforms>
@@ -641,7 +634,6 @@
 				</TCEforms>
 			</borrowed>
 
-			
 			<!-- Citeid filter -->
 			<!-- Enable filter -->
 			<enable_citeid>
@@ -665,9 +657,54 @@
 					</config>
 				</TCEforms>
 			</citeids>
-			
+
+			<!-- Search all filter -->
+			<!-- Enable filter -->
+			<enable_search_all>
+				<TCEforms>
+					<label>LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.enable_search_all</label>
+					<config>
+						<type>check</type>
+						<default>0</default>
+					</config>
+				</TCEforms>
+			</enable_search_all>
+
+			<!-- Search all word list -->
+			<search_all>
+				<TCEforms>
+					<label>LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.search_all</label>
+					<config>
+						<type>text</type>
+						<cols>30</cols>
+						<rows>5</rows>
+					</config>
+				</TCEforms>
+			</search_all>
+
+			<!-- Search all rule -->
+			<search_all_rule>
+				<TCEforms>
+					<label>LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.search_all_rule</label>
+					<config>
+						<type>radio</type>
+						<items>
+							<numIndex index="0">
+								<numIndex index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.rule_OR</numIndex>
+								<numIndex index="1">0</numIndex>
+							</numIndex>
+							<numIndex index="1">
+								<numIndex index="0">LLL:EXT:sevenpack/pi1/locallang_flex.xml:tt_content.pi_flexform.rule_AND</numIndex>
+								<numIndex index="1">1</numIndex>
+							</numIndex>
+						</items>
+						<default>0</default>
+					</config>
+				</TCEforms>
+			</search_all_rule>
+
 		</el>
-		
+
 	</ROOT>
 </s_filter>
 
