@@ -38,6 +38,7 @@
 			<label index="tt_content.pi_flexform.enable_keywords">Enable keyword filter</label>
 			<label index="tt_content.pi_flexform.enable_origin">Enable intern/extern filter</label>
 			<label index="tt_content.pi_flexform.enable_reviewes">Enable reviewed filter</label>
+			<label index="tt_content.pi_flexform.enable_search_all">Enable general keyword filter</label>
 			<label index="tt_content.pi_flexform.enable_state">Enable stater filter</label>
 			<label index="tt_content.pi_flexform.enable_year">Enable year filter</label>
 			<label index="tt_content.pi_flexform.enum.TS">TypoScript (default)</label>
@@ -56,10 +57,8 @@
 			<label index="tt_content.pi_flexform.in_library.0">Not in library</label>
 			<label index="tt_content.pi_flexform.in_library.1">In library</label>
 			<label index="tt_content.pi_flexform.items_per_page">Nr. of references per page (0=all, -1=Typoscript)</label>
-			<label index="tt_content.pi_flexform.keywords">Keywords, comma-separated</label>
+			<label index="tt_content.pi_flexform.keywords">Keywords - comma separated</label>
 			<label index="tt_content.pi_flexform.keywords_rule">Keywords filter rule</label>
-			<label index="tt_content.pi_flexform.keywords_rule.AND">AND</label>
-			<label index="tt_content.pi_flexform.keywords_rule.OR">OR</label>
 			<label index="tt_content.pi_flexform.max_authors">Nr. of authors to display (0=all, -1=TypoScript)</label>
 			<label index="tt_content.pi_flexform.off">Off</label>
 			<label index="tt_content.pi_flexform.origins">Intern/Extern</label>
@@ -74,6 +73,10 @@
 			<label index="tt_content.pi_flexform.reviewes">Reviewed</label>
 			<label index="tt_content.pi_flexform.reviewes.0">Not reviewed</label>
 			<label index="tt_content.pi_flexform.reviewes.1">Reviewed</label>
+			<label index="tt_content.pi_flexform.rule_AND">AND</label>
+			<label index="tt_content.pi_flexform.rule_OR">OR</label>
+			<label index="tt_content.pi_flexform.search_all">Search in all fields - comma separated</label>
+			<label index="tt_content.pi_flexform.search_all_rule">Search filter rule</label>
 			<label index="tt_content.pi_flexform.sheet_fe_editor">FE editor</label>
 			<label index="tt_content.pi_flexform.sheet_filter">Filter</label>
 			<label index="tt_content.pi_flexform.sheet_general">General</label>
@@ -123,6 +126,7 @@
 			<label index="tt_content.pi_flexform.enable_keywords">Aktiviere Schlüsselwort Filter</label>
 			<label index="tt_content.pi_flexform.enable_origin">Aktiviere Intern/Extern Filter</label>
 			<label index="tt_content.pi_flexform.enable_reviewes">Aktiviere Begutachtet Filter</label>
+			<label index="tt_content.pi_flexform.enable_search_all">Aktiviere allgemeinen Schlüsselwort Filter</label>
 			<label index="tt_content.pi_flexform.enable_state">Aktiviere Zustands Filter</label>
 			<label index="tt_content.pi_flexform.enable_year">Aktiviere Jahres Filter</label>
 			<label index="tt_content.pi_flexform.enum.TS">TypoScript (Standard)</label>
@@ -141,10 +145,8 @@
 			<label index="tt_content.pi_flexform.in_library.0">Nicht in Bibliothek</label>
 			<label index="tt_content.pi_flexform.in_library.1">In Bibliothek</label>
 			<label index="tt_content.pi_flexform.items_per_page">Anz. von Referenzen pro Seite (0=Alle, -1=TypoScript)</label>
-			<label index="tt_content.pi_flexform.keywords">Schlüsselwörter</label>
+			<label index="tt_content.pi_flexform.keywords">Schlüsselwörter - Komma separiert</label>
 			<label index="tt_content.pi_flexform.keywords_rule">Schlüsselwort Filter Regel</label>
-			<label index="tt_content.pi_flexform.keywords_rule.AND">UND</label>
-			<label index="tt_content.pi_flexform.keywords_rule.OR">ODER</label>
 			<label index="tt_content.pi_flexform.max_authors">Anz. der zu zeigenden Autoren (0=Alle, -1=TypoScript)</label>
 			<label index="tt_content.pi_flexform.off">Aus</label>
 			<label index="tt_content.pi_flexform.origins">Intern/Extern</label>
@@ -159,6 +161,10 @@
 			<label index="tt_content.pi_flexform.reviewes">Begutachtet</label>
 			<label index="tt_content.pi_flexform.reviewes.0">Nur begutachtet</label>
 			<label index="tt_content.pi_flexform.reviewes.1">Nur unbegutachtet</label>
+			<label index="tt_content.pi_flexform.rule_AND">UND</label>
+			<label index="tt_content.pi_flexform.rule_OR">ODER</label>
+			<label index="tt_content.pi_flexform.search_all">Suche in allen Feldern - Komma separiert</label>
+			<label index="tt_content.pi_flexform.search_all_rule">Schlüsselwort Filter Regel</label>
 			<label index="tt_content.pi_flexform.sheet_fe_editor">FE Editor</label>
 			<label index="tt_content.pi_flexform.sheet_filter">Filter</label>
 			<label index="tt_content.pi_flexform.sheet_general">Allgemein</label>
